k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-api
  labels:
    app: gym-api
spec:
  selector:
    app: gym-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
